<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email: </string>
    <string name="password">Password: </string>
    <string name="shoeName">Shoe Name: </string>
    <string name="shoeListName">Name: </string>
    <string name="shoeCompany">Shoe Company: </string>
    <string name="shoeListCompany">Company: </string>
    <string name="shoeSize">Shoe Size: </string>
    <string name="shoeListSize">Size: </string>
    <string name="shoeDescription">Description: </string>

    <string name="bu_new_login_label">New login</string>
    <string name="bu_existing_login_label">Existing user Login</string>
    <string name="tv_text_welcome">WELCOME TO LOGIN SCREEN</string>
    <string name="tv_text_welcome_two">this is welcome screen info placeholder</string>
    <string name="tv_text_instructions">WELCOME TO LOGIN INSTRUCTIONS</string>
    <string name="tv_text_shoeList_sample_text">This is sample Shoe Information </string>

    <string name="tv_text_instructions_two">This is Instructions information center</string>
    <string name="bu_welcome_label">To Instructions</string>
    <string name="bu_instructions_label">Open Shoe List</string>
    <string name="FAB_CONTENT">DETAILS</string>
    <string name="menu_logout_text">Log out</string>
    <string name="buttonSave">Save</string>
    <string name="buttonCancel">cancel</string>
    <string name="size_format">%f</string>
    <string name="shoeListDescription">Description</string>
</resources>
