<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.MainFragment">


        <TextView
            android:id="@+id/tv_email"
            style="@style/EmailStyle"
            android:layout_width="83dp"
            android:layout_height="34dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_password"
            style="@style/EmailStyle"
            android:layout_width="91dp"
            android:layout_height="34dp"
            android:layout_marginStart="@dimen/layout_wide"
            android:layout_marginTop="24dp"
            android:paddingTop="@dimen/small_padding"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            app:layout_goneMarginTop="@dimen/layout_margin" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            style="@style/EditStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_email"
            app:layout_constraintTop_toTopOf="@+id/tv_email" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            style="@style/EditStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="@+id/tv_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_password"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

        <Button
            android:id="@+id/buNewLogin"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_wide"
            android:background="@color/buColor_New"
            android:text="@string/bu_new_login_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/buExistLogin"
            app:layout_constraintEnd_toStartOf="@+id/buExistLogin"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buExistLogin"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/layout_wide"
            android:background="@color/buColor_Existing"
            android:text="@string/bu_existing_login_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buNewLogin"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
            app:layout_constraintVertical_bias="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
