<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.udacity.shoestore.util.Converter"/>
        <variable
            name="shoeToList"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvItemShoeSize"
            style="@style/EmailStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:paddingTop="@dimen/small_padding"
            android:text="@string/shoeListSize"
            app:layout_constraintEnd_toStartOf="@+id/tvShoeItemCompany"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvItemShoeName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginTop="@dimen/layout_margin" />

        <TextView
            android:id="@+id/tvShoeItemCompany"
            style="@style/EmailStyle"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="@dimen/small_padding"
            android:text="@string/shoeListCompany"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvItemShoeSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvItemShoeSize"
            app:layout_goneMarginTop="@dimen/layout_margin" />

        <TextView
            android:id="@+id/etShoeItemCompany"
            style="@style/EditStyle"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:text="@{shoeToList.company}"
            app:layout_constraintBaseline_toBaselineOf="@+id/etShoeItemSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/etShoeItemSize" />

        <TextView
            android:id="@+id/etShoeItemName"
            style="@style/EditStyle"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:text="@{shoeToList.name}"
            app:layout_constraintEnd_toStartOf="@+id/etShoeItemSize"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemShoeName" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/EmailStyle"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginStart="16dp"
            android:paddingTop="@dimen/small_padding"
            android:text="@string/shoeListDescription"
            app:layout_constraintBaseline_toBaselineOf="@+id/etShoeItemDescription"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvItemShoeName"
            style="@style/EmailStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/shoeListName"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvItemShoeSize"
            app:layout_constraintEnd_toStartOf="@+id/tvItemShoeSize"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/etShoeItemSize"
            style="@style/EditStyle"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:autofillHints=""
            android:ems="10"
            android:text="@{Converter.toString(shoeToList.size)}"
            app:layout_constraintEnd_toStartOf="@+id/etShoeItemCompany"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/etShoeItemName"
            app:layout_constraintTop_toTopOf="@+id/etShoeItemName" />

        <TextView
            android:id="@+id/etShoeItemDescription"
            style="@style/EditStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:autofillHints=""
            android:ems="10"
            android:text="@{shoeToList.description}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tvDescription"
            app:layout_constraintTop_toBottomOf="@+id/etShoeItemCompany"
            app:layout_constraintVertical_bias="0.051" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>